# home-server

./: .gitignore  .pre-commit-config.yaml  README.md  bumpversion.py  config.py  docker-compose-root.yaml  docker-compose-rootless.yaml  docker-compose.yaml  requirements-dev.txt
common/: api.py  config.py  utils.py
common/config/: services_dashboard.json
config/: logging_root.yaml
config/nginx/: default.conf
infrastructure/dns/: Dockerfile  README.md  dns.sh  entrypoint.sh  health.py  main.py
infrastructure/dns/providers/: __init__.py  base.py  cloudflare.py  duckdns.py
infrastructure/nginx_edge/config/: common-headers.conf  default.conf  edge-internal-headers.conf
infrastructure/nginx_edge/html/: index.html
infrastructure/nginx_internal/config/: default.conf
infrastructure/nginx_internal/html/: index.html
infrastructure/vouch/config/: config-template.yaml  config.yaml
ops/bootstrap/: conda.py  repo.py  ssh.py
ops/scripts/sudo/: apt-update.sh  apt-upgrade.sh  install.sh
scripts/: gen_mTLS_certificates.sh  generate_dashboard.py  manage_api_keys.py  rotate_mTLS_certificates.sh  setup_py.py
services/debug_nginx/: Dockerfile  main.py
services/dummy/: Dockerfile  main.py
services/monitor/config/: grafana.ini  prometheus.yml
services/nginx/html/: index.html
services/self-employed/: Dockerfile  pyproject.toml  run_invoice.py
services/tgbot/: Dockerfile  README.md  main.py  requirements.txt
services/tgbot/config/: logging_httpx.yaml  logging_tgbot.yaml  permissions.yaml  service_dispatch.json
services/tgbot/src/: access_control.py  bot.py  (+2 more)
(+8 files in other folders)
